[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/canon_top_down.png" type="Texture" id=1]
[ext_resource path="res://Enamy/turret/Circle_detect/Turret_detect_circle.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.3286

[sub_resource type="CircleShape2D" id=2]
radius = 174.766

[node name="Turret" type="Area2D"]
script = ExtResource( 2 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 28.1985, 0.166855 )

[node name="TargetArea" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Turret_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Turret_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
